--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
