--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "server": "node --prefix server.js ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server && npm run build --prefix server"
+
   },
   "eslintConfig": {
     "extends": [
