--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "server": "node --prefix server.js ",
+    "server": "node ./backend/index.js",
+    "server-install":"npm install ./backend",
+    "server-build":"npm build ./backend",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server && npm run build --prefix server"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false --prefix server-install && --prefix server-build"
 
   },
   "eslintConfig": {
