--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false --prefix server-install && --prefix server-build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install ./backend && npm build ./backend"
 
   },
   "eslintConfig": {
